# swift-api-rest

./: .gitignore  LICENSE  README.md  amplify-stage.sh  configure.sh  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.py  watch.sh
.github/workflows/: tests.yml
clients/: typescript-angular.json  typescript-ng.json  typescript-react.json
docker/: Dockerfile  docker-compose.yml
scripts/: update-client-ng.sh  update-client-react.sh  update-typescript-client.sh
src/swift_api/: app.py  config.py
src/swift_api_rest/: app.py  database.py  models_api.py
test/: test_books.py  test_main.py  test_root.py
