[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swift-api-rest"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "vkantchev", email = "vkantchev@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/vkantchev/swift-api-rest#readme"
Issues = "https://github.com/vkantchev/swift-api-rest/issues"
Source = "https://github.com/vkantchev/swift-api-rest"

[tool.hatch.version]
path = "src/swift_api/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/swift_api test}"

[tool.coverage.run]
source_pkgs = ["swift_api", "test"]
branch = true
parallel = true
omit = [
  "src/swift_api/__about__.py",
]

[tool.coverage.paths]
swift_api = ["src/swift_api", "*/swift-api-rest/src/swift_api"]
test = ["test", "*/swift-api-rest/test"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.black]
line-length = 200

[tool.pylint.format]
max-line-length = 200